--- a/index.html
+++ b/index.html
@@ -1,65 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Keyblitz</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-</head>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-<body class="container">
+  <body class="container">
     <main>
-        <div id="title-text">
-            <h4>KeyBlitz</h4>
-            <h2>Test your typing skills</h2>
+      <div id="title-text">
+        <h4>KeyBlitz</h4>
+        <h2>Test your typing skills</h2>
+      </div>
+      <div id="current-stats">
+        <div class="metric-box">
+          <div id="timer" class="metric">60</div>
+          <div class="metric-description">seconds</div>
         </div>
-        <div id="current-stats">
-            <div class="metric-box">
-                <div id="timer" class="metric">60</div>
-                <div class="metric-description">seconds</div>
-            </div>
-            <div class="metric-box">
-                <div class="metric">0</div>
-                <div class="metric-description">mistakes</div>
-            </div>
-            <div class="metric-box">
-                <div class="metric">0</div>
-                <div class="metric-description">words/min</div>
-            </div>
-            <div class="metric-box">
-                <div class="metric">100</div>
-                <div class="metric-description">% accuracy</div>
-            </div>
+        <div class="metric-box">
+          <div class="metric">0</div>
+          <div class="metric-description">mistakes</div>
         </div>
-        <div class="main">
-            <div class="text-container">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia deleniti natus
-                atque unde voluptatibus eos ipsa ea, sit corrupti at, consequatur earum commodi ad deserunt explicabo
-                error
-                praesentium molestias enim.
-            </div>
-            <div class="restart">Restart</div>
-            <div>
-                <h3>Instructions</h3>
-                <p>The test begins when you start typing. Your results will be displayed in a table below.</p>
-                <p>Performance calculation starts from your second attempt. Use these keys:</p>
-                <ul>
-                    <li><strong>ESC:</strong> Reset the current text</li>
-                    <li><strong>ENTER:</strong> Generate a new text</li>
-                </ul>
-                <p><strong>Ready? Start typing to begin!</strong></p>
-            </div>
-            <div>
-                <h3>Disclaimer</h3>
-                <p>Text content is randomly generated. Some words may be inappropriate or offensive to certain users. We
-                    apologize for any unintended discomfort.</p>
-            </div>
+        <div class="metric-box">
+          <div class="metric">0</div>
+          <div class="metric-description">words/min</div>
         </div>
+        <div class="metric-box">
+          <div class="metric">100</div>
+          <div class="metric-description">% accuracy</div>
+        </div>
+      </div>
+      <div class="container mt-5">
+        <div class="container text-container"></div>
+        <div class="restart">Restart</div>
+        <div>
+          <h3>Instructions</h3>
+          <p>
+            The test begins when you start typing. Your results will be
+            displayed in a table below.
+          </p>
+          <p>
+            Performance calculation starts from your second attempt. Use these
+            keys:
+          </p>
+          <ul>
+            <li><strong>ESC:</strong> Reset the current text</li>
+            <li><strong>ENTER:</strong> Generate a new text</li>
+          </ul>
+          <p><strong>Ready? Start typing to begin!</strong></p>
+        </div>
+        <div>
+          <h3>Disclaimer</h3>
+          <p>
+            Text content is randomly generated. Some words may be inappropriate
+            or offensive to certain users. We apologize for any unintended
+            discomfort.
+          </p>
+        </div>
+      </div>
     </main>
-    <footer></footer>
-</body>
-
+    <footer class="container mt-5">
+      <footer>
+        <strong>Thank you for visiting!</strong>
+        <br />
+        <p>
+          Made for
+          <a href="https://www.turingcollege.com" target="_blank"
+            >Turing College</a
+          >
+          by
+          <a
+            href="https://www.linkedin.com/in/martynas-grumadas-17055a83/"
+            target="_blank"
+            >Martynas Grumadas</a
+          >, &copy; 2024. <br />
+        </p>
+      </footer>
+    </footer>
+    <script src="./scripts/main.js"></script>
+  </body>
 </html>
