--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
       </div>
       <div class="container mt-5">
-        <div class="container text-container"></div>
+        <div class="container text-container">Generating text..</div>
         <div class="restart">Restart</div>
         <div>
           <h3>Instructions</h3>
@@ -90,6 +90,6 @@
         </p>
       </footer>
     </footer>
-    <script src="./scripts/main.js"></script>
+    <script type="module" src="./src/main.js"></script>
   </body>
 </html>
