--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <div class="metric-description">seconds</div>
         </div>
         <div class="metric-box">
-          <div class="metric">0</div>
+          <div id="mistakes" class="metric">0</div>
           <div class="metric-description">mistakes</div>
         </div>
         <div class="metric-box">
