--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
           <div class="metric-description">mistakes</div>
         </div>
         <div class="metric-box">
-          <div class="metric">0</div>
+          <div id="wpm" class="metric">0</div>
           <div class="metric-description">words/min</div>
         </div>
         <div class="metric-box">
-          <div class="metric">100</div>
+          <div id="accuracy" class="metric">100</div>
           <div class="metric-description">% accuracy</div>
         </div>
       </div>
