--- a/index.html
+++ b/index.html
@@ -70,25 +70,36 @@
             discomfort.
           </p>
         </div>
+        <table class="container mt-5">
+          <thead>
+            <tr>
+              <th scope="col">Date and time</th>
+              <th scope="col">Mistakes</th>
+              <th scope="col">WPM</th>
+              <th scope="col">Accuracy</th>
+              <th scope="col">Performance</th>
+            </tr>
+          </thead>
+          <tbody id="resultsTable"></tbody>
+        </table>
       </div>
+      
     </main>
     <footer class="container mt-5">
-      <footer>
-        <strong>Thank you for visiting!</strong>
-        <br />
-        <p>
-          Made for
-          <a href="https://www.turingcollege.com" target="_blank"
-            >Turing College</a
-          >
-          by
-          <a
-            href="https://www.linkedin.com/in/martynas-grumadas-17055a83/"
-            target="_blank"
-            >Martynas Grumadas</a
-          >, &copy; 2024. <br />
-        </p>
-      </footer>
+      <strong>Thank you for visiting!</strong>
+      <br />
+      <p>
+        Made for
+        <a href="https://www.turingcollege.com" target="_blank"
+          >Turing College</a
+        >
+        by
+        <a
+          href="https://www.linkedin.com/in/martynas-grumadas-17055a83/"
+          target="_blank"
+          >Martynas Grumadas</a
+        >, &copy; 2024. <br />
+      </p>
     </footer>
     <script type="module" src="./src/main.js"></script>
   </body>
