corrected after html validations

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Keyblitz</title>
     <link rel="icon" href="./styles/favicon/bolt.svg" type="image/svg+xml">
     <link
@@ -10,18 +10,18 @@
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="./styles/style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    >
+    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
       href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
-    />
+    >
   </head>
 
   <body class="container">
-    <main role="main">
+    <main>
       <div id="title-text">
         <h1>KeyBlitz</h1>
         <h2>Test your typing skills</h2>
@@ -35,7 +35,7 @@
             role="timer"
             aria-label="Time remaining"
           >
-          ∞
+            ∞
           </div>
           <div class="metric-description">seconds</div>
         </div>
@@ -111,7 +111,7 @@
             discomfort.
           </p>
         </div>
-        <table class="container mt-5" role="table" aria-label="Results table">
+        <table class="container mt-5" aria-label="Results table">
           <thead>
             <tr>
               <th scope="col">Date and time</th>
@@ -127,7 +127,7 @@
     </main>
     <footer class="container mt-5">
       <strong>Thank you for visiting!</strong>
-      <br />
+      <br>
       <p>
         Made for
         <a href="https://www.turingcollege.com" target="_blank"
@@ -138,7 +138,7 @@
           href="https://www.linkedin.com/in/martynas-grumadas-17055a83/"
           target="_blank"
           >Martynas Grumadas</a
-        >, &copy; 2024. <br />
+        >, &copy; 2024. <br>
       </p>
     </footer>
     <script type="module" src="./src/main.js"></script>
