made restart button hidden before the end

--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
         >
           Generating text..
         </div>
+        <div id="messageLine" class="mt-3"></div>
         <div class="restart" role="button">Restart</div>
         <div>
           <h4>Instructions</h4>
